# Ananke development/testing configuration
# This allows testing Ananke core modules independently of full sglang

[project]
name = "ananke"
version = "0.1.0"
description = "Compositional constraint system for verified code generation"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

dependencies = [
    "torch>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.0.0",
    "z3-solver>=4.12.0",
]
dev = [
    "ananke[test]",
    "mypy>=1.8.0",
]
# Full dependencies for integration with sglang
full = [
    "llguidance>=0.7.11,<0.8.0",
    "immutables>=0.20",
    "tree-sitter>=0.22.0",
    "z3-solver>=4.12.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
